# vici

./: .coverage  .env.app.development  .env.app.example  .env.development  .env.example  .env.grafana.development  .env.grafana.example  .env.jaeger-query.development  .env.jaeger-query.example  .env.opensearch.development  .env.opensearch.example  .env.postgres.development  .env.postgres.example  .env.temporal-ui.development  .env.temporal-ui.example  .env.temporal.development  .env.temporal.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.claude/: settings.json
.github/workflows/: cd-base.yml  cd-dev.yml  cd-prod.yml  cd-staging.yml  ci.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  FEATURES.md  INTEGRATIONS.md  PITFALLS.md  STACK.md  STRUCTURE.md  SUMMARY.md  TESTING.md
.planning/debug/: cert-manager-helm-timeout.md  deploy-dev-iam-403.md  full-stack-health-phase5.md  knowledge-base.md  pulumi-gcp-provider-panic.md  pulumi-passphrase-mismatch.md  pulumi-sdk-not-installed.md  pulumi-state-bucket-409-fresh-stack.md  pulumi-up-apply-failure.md  pulumi-up-local.md  render-still-deploying.md  sms-webhook-signature-403.md  temporal-schema-migration-job-failing.md  test-suite-validation.md
.planning/forensics/: report-20260409-120000.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/notes/: 2026-04-06-fix-ci-compute-regions-permission.md
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
.planning/research/: STACK.md  (+4 more)
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
infra/: DOMAIN-SETUP.md  OPERATIONS.md  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py  config.py  pyproject.toml  requirements.txt
infra/components/: app.py  cd.py  certmanager.py  cluster.py  database.py  iam.py  identity.py  ingress.py  jaeger.py  migration.py  namespaces.py  network_policy.py  opensearch.py  pdb.py  prometheus.py  registry.py  secrets.py  state_bucket.py  temporal.py
jaeger/: collector-config.yaml  query-config.yaml
migrations/: env.py
prometheus/: prometheus.yml
src/: config.py  database.py  datetimes.py  exceptions.py  inngest_client.py  main.py  metrics.py  models.py  money.py  observability.py  repository.py
tests/: conftest.py  test_3nf_normalization.py  test_config.py  test_docs_exposure.py  test_health.py  test_logging.py  test_otel_config.py  test_pipeline_hardening.py  test_pipeline_orchestrator.py  test_repositories.py
(+397 files in other folders)
